fixed the back button icon and text alignment on the about country page

--- a/src/components/AboutCountry.css
+++ b/src/components/AboutCountry.css
@@ -14,7 +14,7 @@
 
 .back-button-link {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
